--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
-MONGODB_URL = mongodb+srv://ksama2098_db_user:vd3Aotg8SppWvoUi@cluster0.jtytcn8.mongodb.net/?appName=Cluster0
+PORT = 8080
+MONGODB_URI = mongodb+srv://prasenjitagt:8119@cluster0.fywalr2.mongodb.net/?appName=Cluster0
+JWT_SECRET = super_secret_libaas_2025
+CLIENT_URL = http://localhost:3000
